[package]
name = "vscode-sys-test"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = '0.4.26'
js-sys = "0.3"
web-sys = { version = "0.3", features = [ "console" ] }
vscode-sys = { path = "../vscode-sys" }